# zombie-escape

./: .gitignore  AGENTS.md  README-ja_JP.md  README.md  REDME-ja_JP.md  memo-build-windows-binary.md  pyproject.toml  stage-5-design.md  stage-5-draft.md
docs/: README.md  design.md  developer-notes.md  python-compat-uv.md  stages-16plus-ja_JP.md  stages-16plus.md  stages-26plus-ja_JP.md  stages-26plus.md  stages-36plus-ja_JP.md  stages-36plus.md  stages-6plus-ja_JP.md  stages-6plus.md  user-input-spec.md
docs/design/: README.md  ai-zombies.md  architecture.md  carrier-bot.md  config-and-progress.md  constants-index.md  data-models.md  entities.md  gameplay-flow.md  input-controls.md  level-generation.md  localization.md  rendering.md  title-screen.md  windowing-platform.md
docs/design/legacy/: design.ja.md
docs/developer/: README.md  fog-cache-cli.md  rubble-relief-table.md  user-input-spec.md  wall-hug-optimization.md  windows-build.md  zone-from-ascii.md
scripts/: check-multi-py.sh  floor_barcode_preview.py  floor_ruin_preview.py  generate_puddle_moonlight_loop.py  generate_puddle_wave_samples.py  generate_rubble_relief_table.py  puddle_reflection_editor.py  wall_damage_preview.py  zone_from_ascii.py
src/zombie_escape/: __about__.py  __init__.py  __main__.py  colors.py  config.py  constants.py  entities.py  entities_constants.py  export_images.py  font_utils.py  gameplay_constants.py  i18n.py  input_utils.py  level_blueprints.py  level_constants.py  localization.py  models.py  movement_helpers.py  overview.py  progress.py  render.py  render_assets.py  render_constants.py  render_constants.py.bak  render_hud.py  render_overview.py  render_shadows.py  rng.py  screen_constants.py  stage_constants.py  surface_effects.py  windowing.py  world_grid.py  zombie_escape.py
src/zombie_escape/entities/: __init__.py  base_line_bot.py  car.py  carrier_bot.py  collisions.py  houseplant.py  material.py  movement.py  movement_helpers.py  patrol_bot.py  patrol_paralyze.py  player.py  spiky_plant.py  survivor.py  tracker_scent.py  transport_bot.py  walls.py  zombie.py  zombie_dog.py  zombie_movement.py  zombie_visuals.py  zombie_vitals.py
src/zombie_escape/gameplay/: __init__.py  ambient.py  constants.py  decay_effects.py  entity_interactions.py  entity_updates.py  footprints.py  interactions.py  layout.py  logic.py  (+8 more)
tests/: __init__.py  test_base_line_bot.py  test_carrier_bot.py  test_carrier_spawn_range.py  test_config.py  test_decay_effects.py  test_fire_floor_brightness.py  test_fire_floor_enemy_movement.py  test_footprints.py  test_json_integrity.py  test_layout_spawn_rules.py  test_level_blueprints_connectivity.py  test_lineformer_movement.py  test_lineformer_trains.py  test_localization.py  test_localization_schema.py  test_loner_movement.py  test_material_collision_behavior.py  test_patrol_bot_control.py  test_player_visuals.py  test_render_fog.py  test_render_fog_cache.py  test_solitary_movement.py  test_spatial_index.py  test_spawn_flashlights.py  test_spawn_material_blocking.py  test_stage_blueprint_reachability.py  test_stage_defaults.py  test_survival_stage.py  test_survivor_logic.py  test_tracker_dog_movement.py  test_tracker_scent_scan.py  test_transport_bot.py  test_wall_algorithm_alias.py  test_wall_bevel.py  test_wall_damage_visuals.py  test_wall_follow_gap.py  test_wall_rounded_collision.py  test_zombie_variant.py  test_zombie_variant_marker_cache.py
(+56 files in other folders)
