[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zombie-escape"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Toshihiro Kamiya", email = "kamiya@mbj.nifty.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "pygame",
  "platformdirs",
]

[tool.hatch.version]
path = "src/zombie_escape/__about__.py"

[project.gui-scripts]
zombie-escape = "zombie_escape:main"
