[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zombie-escape"
dynamic = ["version"]
description = "Top-down zombie survival game built with pygame."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Toshihiro Kamiya", email = "kamiya@mbj.nifty.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "numpy",
  "pygame",
  "platformdirs",
  "python-i18n",
  "typing-extensions; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pyright",
  "pytest",
  "ruff",
  "pydeps",
]

[project.urls]
Homepage = "https://github.com/tos-kamiya/zombie-escape"

[tool.hatch.version]
path = "src/zombie_escape/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/zombie_escape"]
include = [
  "src/zombie_escape/assets/**",
  "src/zombie_escape/locales/**",
]

[tool.hatch.build.targets.sdist]
include = ["src/zombie_escape/**"]

[project.gui-scripts]
zombie-escape = "zombie_escape:main"

[tool.ty.rules]
unresolved-import = "ignore"
